[gd_scene load_steps=4 format=3 uid="uid://csgeoogjfhxe5"]

[ext_resource type="Script" path="res://scenes/skills/skill_button.gd" id="1_1hqgn"]
[ext_resource type="Theme" uid="uid://bi14pol6tu0ee" path="res://scenes/skills/style.tres" id="1_ntquo"]
[ext_resource type="Texture2D" uid="uid://bmbsgvjy33e1x" path="res://textures/skills/undo.png" id="2_8v2t3"]

[node name="SkillButton" type="MarginContainer"]
offset_right = 96.0
offset_bottom = 56.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_ntquo")
script = ExtResource("1_1hqgn")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_right = 48.0
offset_bottom = 95.0
grow_horizontal = 2
theme_override_constants/separation = -1

[node name="ButtonMarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="Panel/VBoxContainer/ButtonMarginContainer"]
custom_minimum_size = Vector2(96, 56)
layout_mode = 2
size_flags_horizontal = 4
icon_alignment = 1

[node name="Icon" type="TextureRect" parent="Panel/VBoxContainer/ButtonMarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("2_8v2t3")

[node name="LabelMarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="Label" type="Label" parent="Panel/VBoxContainer/LabelMarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "10"
max_lines_visible = 1
visible_characters = 4
visible_ratio = 2.0

[connection signal="pressed" from="Panel/VBoxContainer/ButtonMarginContainer/Button" to="." method="_on_button_pressed"]
